--- a/packages/page-header-fixed/src/locales/index.json
+++ b/packages/page-header-fixed/src/locales/index.json
@@ -10,6 +10,8 @@
     "Profile":"Profile",
     "Sign Out":"Sign Out",
     "Lock":"Lock",
-    "Page Header":"Page Header"
+    "Page Header":"Page Header",
+    "Menu":"Menu",
+    "Close":"Close"
   }
 }
